--- a/26/css/style.css
+++ b/26/css/style.css
@@ -11,3 +11,12 @@
     display: flex;
     align-items: center;
 }
+
+#logo{
+    margin: 10px 34px;
+}
+
+#logo img{
+    height: 59px;
+    margin: 3px 6px;
+}
