--- a/26/css/style.css
+++ b/26/css/style.css
@@ -58,3 +58,39 @@ ul{
     border-radius: 20px;
     text-decoration: none;
 }
+
+#home{
+    display: flex;
+    flex-direction: column;
+    padding: 3px 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+#home::before{
+    content:"";
+    background: url(../bg1.jpg) no-repeat center center/cover;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    opacity: 0.89;
+}
+
+#home p{
+    color: white;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+#home h1{
+    color: white;
+    text-align: center;
+}
+
+.h-primary{
+    font-size: 2.8rem;
+    padding: 12px;
+}
