--- a/26/css/style.css
+++ b/26/css/style.css
@@ -94,3 +94,14 @@ ul{
     font-size: 2.8rem;
     padding: 12px;
 }
+
+.btn{
+    padding: 6px 20px;
+    border: 2px solid white;
+    background-color: brown;
+    color: white;
+    margin: 15px;
+    font-size: 1.4rem;
+    border-radius: 10px;
+    cursor: pointer;
+}
