--- a/26/css/style.css
+++ b/26/css/style.css
@@ -10,6 +10,8 @@
 #navbar {
     display: flex;
     align-items: center;
+    position: relative;
+    top: 0;
 }
 
 #logo{
@@ -41,9 +43,7 @@ ul{
 }
 
 
-#navbar{
-    position: relative;
-}
+
 #navbar ul li a{
     display: block;
     padding: 3px 22px;
@@ -73,7 +73,7 @@ ul{
     content:"";
     background: url(../bg1.jpg) no-repeat center center/cover;
     position: absolute;
-    height: 100%;
+    height: 633px;
     width: 100%;
     z-index: -1;
     opacity: 0.89;
@@ -91,9 +91,36 @@ ul{
 }
 
 .h-primary{
+    font-size: 3.8rem;
+    padding: 12px;
+    margin-top: 100px;
+}
+
+.h-secondary{
     font-size: 2.8rem;
     padding: 12px;
 }
+
+#services{
+    margin: 34px;
+    display: flex;
+}
+
+#services .box{
+    border: 2px solid brown;
+    border-radius: 1.8rem;
+    margin-left: 1rem;
+
+}
+
+#services .box img{
+height: 160px;
+display: flex;
+display: block;
+margin-left: 4rem;
+
+}
+
 
 .btn{
     padding: 6px 20px;
@@ -104,4 +131,8 @@ ul{
     font-size: 1.4rem;
     border-radius: 10px;
     cursor: pointer;
+}
+
+.center{
+    text-align: center;
 }
