--- a/26/css/style.css
+++ b/26/css/style.css
@@ -116,6 +116,40 @@ ul{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+#client-section{
+height: 344px;
+}
+
+#client-section::before{
+content: "";
+position: absolute;
+background: url('../bg.jpg');
+width: 100%;
+height: 53%;
+z-index: -1;
+opacity: 0.4;
+}
+
+#clients{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#clients img{
+    height: 124px;
+}
+
+.client-item{
+    padding: 34px;
+}
+
+.h-primary{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 3.8rem;
+    padding: 12px;
+}
+
 #services .box img{
 height: 160px;
 display: flex;
