--- a/26/css/style.css
+++ b/26/css/style.css
@@ -146,7 +146,7 @@ opacity: 0.4;
 
 .h-primary{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 3.8rem;
+    font-size: 1.8rem;
     padding: 12px;
 }
 
@@ -172,4 +172,22 @@ margin-left: 4rem;
 
 .center{
     text-align: center;
+}
+
+#contact-box {
+    margin: 1rem;
+}
+
+#contact {
+    position: relative;
+}
+
+#contact::before{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    opacity: 0.7;
+    background: url('../contact.jpg') no-repeat center center/cover;
 }
