--- a/26/css/style.css
+++ b/26/css/style.css
@@ -182,6 +182,8 @@ margin-left: 4rem;
     position: relative;
 }
 
+
+
 #contact::before{
     content: "";
     position: absolute;
@@ -190,4 +192,25 @@ margin-left: 4rem;
     z-index: -1;
     opacity: 0.7;
     background: url('../contact.jpg') no-repeat center center/cover;
+}
+
+#contact-box input,
+#contact-box textarea{
+    width: 100%;
+    padding: 0.5rem;
+}
+
+#contact-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 34px;
+}
+
+#contact-box form{
+    width: 40%;
+}
+
+#contact-box label{
+    font-size: 1.3rem;
 }
