--- a/26/css/style.css
+++ b/26/css/style.css
@@ -14,26 +14,26 @@
     top: 0;
 }
 
-#logo{
+#logo {
     margin: 10px 34px;
 }
 
-#logo img{
+#logo img {
     height: 59px;
     margin: 3px 6px;
 }
 
-ul{
+ul {
     display: flex;
 }
 
-#navbar ul li{
+#navbar ul li {
     list-style: none;
     font-size: 1.3rem;
 }
 
-#navbar::before{
-    content:"";
+#navbar::before {
+    content: "";
     background-color: black;
     position: absolute;
     height: 100%;
@@ -44,14 +44,14 @@ ul{
 
 
 
-#navbar ul li a{
+#navbar ul li a {
     display: block;
     padding: 3px 22px;
     border-radius: 20px;
     text-decoration: none;
 }
 
-#navbar ul li a:hover{
+#navbar ul li a:hover {
     color: white;
     display: block;
     padding: 3px 22px;
@@ -59,7 +59,7 @@ ul{
     text-decoration: none;
 }
 
-#home{
+#home {
     display: flex;
     flex-direction: column;
     padding: 3px 200px;
@@ -69,8 +69,8 @@ ul{
 
 
 
-#home::before{
-    content:"";
+#home::before {
+    content: "";
     background: url(../bg1.jpg) no-repeat center center/cover;
     position: absolute;
     height: 633px;
@@ -79,87 +79,87 @@ ul{
     opacity: 0.89;
 }
 
-#home p{
+#home p {
     color: white;
     text-align: center;
     font-size: 1.5rem;
 }
 
-#home h1{
+#home h1 {
     color: white;
     text-align: center;
 }
 
-.h-primary{
+.h-primary {
     font-size: 3.8rem;
     padding: 12px;
     margin-top: 100px;
 }
 
-.h-secondary{
+.h-secondary {
     font-size: 2.8rem;
     padding: 12px;
 }
 
-#services{
+#services {
     margin: 34px;
     display: flex;
 }
 
-#services .box{
+#services .box {
     border: 2px solid brown;
     border-radius: 1.8rem;
     margin-left: 1rem;
 }
 
-#services .box p{
+#services .box p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-#client-section{
-height: 344px;
+#client-section {
+    height: 344px;
 }
 
-#client-section::before{
-content: "";
-position: absolute;
-background: url('../bg.jpg');
-width: 100%;
-height: 53%;
-z-index: -1;
-opacity: 0.4;
+#client-section::before {
+    content: "";
+    position: absolute;
+    background: url('../bg.jpg');
+    width: 100%;
+    height: 53%;
+    z-index: -1;
+    opacity: 0.4;
 }
 
-#clients{
+#clients {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#clients img{
+#clients img {
     height: 124px;
 }
 
-.client-item{
+.client-item {
     padding: 34px;
 }
 
-.h-primary{
+.h-primary {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 1.8rem;
     padding: 12px;
 }
 
-#services .box img{
-height: 160px;
-display: flex;
-display: block;
-margin-left: 4rem;
+#services .box img {
+    height: 160px;
+    display: flex;
+    display: block;
+    margin-left: 4rem;
 
 }
 
 
-.btn{
+.btn {
     padding: 6px 20px;
     border: 2px solid white;
     background-color: brown;
@@ -170,7 +170,7 @@ margin-left: 4rem;
     cursor: pointer;
 }
 
-.center{
+.center {
     text-align: center;
 }
 
@@ -184,7 +184,7 @@ margin-left: 4rem;
 
 
 
-#contact::before{
+#contact::before {
     content: "";
     position: absolute;
     width: 100%;
@@ -195,9 +195,10 @@ margin-left: 4rem;
 }
 
 #contact-box input,
-#contact-box textarea{
+#contact-box textarea {
     width: 100%;
     padding: 0.5rem;
+
 }
 
 #contact-box {
@@ -205,12 +206,21 @@ margin-left: 4rem;
     justify-content: center;
     align-items: center;
     padding-bottom: 34px;
+    margin-bottom: 0%;
+    margin-top: 0%;
 }
 
-#contact-box form{
+#contact-box form {
     width: 40%;
 }
 
-#contact-box label{
+#contact-box label {
     font-size: 1.3rem;
+}
+
+footer .center {
+    background-color: black;
+    color: white;
+    padding: 1rem;
+    margin: 0;
 }
