--- a/26/css/phone.css
+++ b/26/css/phone.css
@@ -40,5 +40,13 @@
     font-size: 26px;
 }
 #contact-box form{
-    
+
+}
+
+#services .box{
+    padding: 14px;
+    margin: 2px 55px;
+    border-radius: 28px;
+    background: #f2f2f2;
+    margin-bottom: 20px;
 }
